[package]
name = "gu-blender-mediator"
version = "0.1.0"
authors = [ "Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>" ]
edition = "2018"

[dependencies]
gu-actix = { git="https://github.com/golemfactory/golem-unlimited.git", branch="feature/js-refactor" }
gu-client = { git="https://github.com/golemfactory/golem-unlimited.git", branch="feature/js-refactor" }
golem_gw_api = { git = "https://github.com/prekucki/golem-gw-client.git" }
structopt = { version = "0.2.14" }
actix = "0.7"
futures = "0.1"
actix-web = { version = "0.7" }
hyper = "0.12"
failure = "0.1.5"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.6.5"
lazy_static = "1.3"
bytes = "0.4.10"
regex = "1.1.2"
env_logger ="0.6.1"
log = "0.4.6"


[build-dependencies]
structopt = { version = "0.2.14"}


[profile.release]
lto = true
opt-level = "z"
panic = "abort"
