[package]
name = "gu-blender-mediator"
version = "0.1.0"
authors = [ "Przemysław K. Rekucki <przemyslaw.rekucki@golem.network>" ]
edition = "2018"

[dependencies]
gu-client = { git="https://github.com/golemfactory/golem-unlimited.git", branch="feature/api-on-actix-http-1" }
gu-plugin-api = { git="https://github.com/golemfactory/golem-unlimited.git", branch="feature/api-on-actix-http-1" }
golem_gw_api = { git = "https://github.com/prekucki/golem-gw-client.git" }
structopt = { version = "0.2.14" }
actix = "0.8"
futures = "0.1"
failure = "0.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.4.0"
lazy_static = "1.3"
bytes = "0.4.10"
regex = "1.1.2"
env_logger ="0.6.1"
log = "0.4.6"
hyper = "0.12"
diesel = { version = "1.0.0", features = ["sqlite", "chrono"], default-features=false }
chrono="0.4"
libsecp256k1 = "0.2.2"
ethsign = "0.5"

[dependencies.actix-web]
version = "1.0.0"
default-features = false
features = ["rust-tls", "client"]


[build-dependencies]
structopt = { version = "0.2.14"}


[profile.release]
lto = true
opt-level = "z"
#panic = "abort"
